# nekidaem_test

./: .example.env  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
infra/: common-services.yml  default.conf  docker-compose.yml
requirements/: dev.txt  prod.txt
src/backend/blogs/: admin.py  api_views.py  constants.py  models.py  pagination.py  permissions.py  serializers.py  services.py  urls.py
src/backend/blogs/migrations/: 0001_initial.py  0002_alter_post_is_read_alter_postread_post_and_more.py  0002_remove_post_is_read_postread_post_is_read.py  0003_alter_blog_followers.py
src/backend/testovoe/: settings.py  urls.py  wsgi.py
src/backend/users/: admin.py  models.py  urls.py
src/backend/users/migrations/: 0001_initial.py
tests/: test_auth.py  test_news.py
tests/fixtures/: fixture_data.py  fixture_user.py
